--- a/Frontend/implementations/react/src/index.html
+++ b/Frontend/implementations/react/src/index.html
@@ -22,7 +22,7 @@
 
 <!-- The Pixel Streaming player fills 100% of its parent element but body has a 0px height unless filled with content. As such, we explicitly force the body to be 100% of the viewport height -->
 <body style="width: 100vw; height: 100vh; min-height: -webkit-fill-available; font-family: 'Montserrat'; margin: 0px">
-
+    <!-- <h1 style="color: green; font-size: 4rem; text-align: center;">Hello World</h1> -->
 </body>
 
 </html>
